--- a/settingswidget.ui
+++ b/settingswidget.ui
@@ -37,7 +37,7 @@
         <height>50</height>
        </size>
       </property>
-      <widget class="QToolButton" name="toolButton">
+      <widget class="QToolButton" name="EndPointsEnable">
        <property name="geometry">
         <rect>
          <x>10</x>
@@ -47,7 +47,10 @@
         </rect>
        </property>
        <property name="text">
-        <string>...</string>
+        <string/>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QLabel" name="label">
@@ -60,7 +63,7 @@
         </rect>
        </property>
        <property name="text">
-        <string>Реверс</string>
+        <string>ВКЛ/ВЫКЛ КОНЕЧНЫЕ ТОЧКИ</string>
        </property>
       </widget>
      </widget>
@@ -79,7 +82,7 @@
         <height>50</height>
        </size>
       </property>
-      <widget class="QToolButton" name="toolButton_3">
+      <widget class="QToolButton" name="EndPointsBehavior">
        <property name="geometry">
         <rect>
          <x>10</x>
@@ -89,7 +92,10 @@
         </rect>
        </property>
        <property name="text">
-        <string>...</string>
+        <string/>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QLabel" name="label_3">
@@ -102,7 +108,7 @@
         </rect>
        </property>
        <property name="text">
-        <string>?????</string>
+        <string>ОСТАНОВ/РЕВЕРС В КОНЕЧНЫХ ТОЧКАХ</string>
        </property>
       </widget>
      </widget>
@@ -121,7 +127,7 @@
         <height>50</height>
        </size>
       </property>
-      <widget class="QToolButton" name="toolButton_5">
+      <widget class="QToolButton" name="SoundStop">
        <property name="geometry">
         <rect>
          <x>10</x>
@@ -131,7 +137,10 @@
         </rect>
        </property>
        <property name="text">
-        <string>...</string>
+        <string/>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QLabel" name="label_5">
@@ -144,7 +153,7 @@
         </rect>
        </property>
        <property name="text">
-        <string>?????</string>
+        <string>СТОП ПО УЗ ДАТЧИКУ</string>
        </property>
       </widget>
      </widget>
@@ -163,7 +172,7 @@
         <height>50</height>
        </size>
       </property>
-      <widget class="QToolButton" name="toolButton_4">
+      <widget class="QToolButton" name="SwapDirection">
        <property name="geometry">
         <rect>
          <x>10</x>
@@ -173,7 +182,10 @@
         </rect>
        </property>
        <property name="text">
-        <string>...</string>
+        <string/>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QLabel" name="label_4">
@@ -186,7 +198,7 @@
         </rect>
        </property>
        <property name="text">
-        <string>?????</string>
+        <string>СМЕНА НАПРАВЛЕНИЯ</string>
        </property>
       </widget>
      </widget>
@@ -205,7 +217,7 @@
         <height>50</height>
        </size>
       </property>
-      <widget class="QToolButton" name="toolButton_2">
+      <widget class="QToolButton" name="StopAccelerometer">
        <property name="geometry">
         <rect>
          <x>10</x>
@@ -215,7 +227,10 @@
         </rect>
        </property>
        <property name="text">
-        <string>...</string>
+        <string/>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QLabel" name="label_2">
@@ -228,7 +243,7 @@
         </rect>
        </property>
        <property name="text">
-        <string>?????</string>
+        <string>СТОП ПО УДАРУ</string>
        </property>
       </widget>
      </widget>
