--- a/host/settingswidget.ui
+++ b/host/settingswidget.ui
@@ -82,7 +82,7 @@
         <height>50</height>
        </size>
       </property>
-      <widget class="QToolButton" name="EndPointsBehavior">
+      <widget class="QToolButton" name="EndPointsStop">
        <property name="geometry">
         <rect>
          <x>10</x>
@@ -108,8 +108,59 @@
         </rect>
        </property>
        <property name="text">
-        <string>ОСТАНОВ/РЕВЕРС В КОНЕЧНЫХ ТОЧКАХ</string>
+        <string>ОСТАНОВ В КОН. ТОЧКАХ</string>
        </property>
+      </widget>
+      <widget class="QWidget" name="widget_9" native="true">
+       <property name="geometry">
+        <rect>
+         <x>248</x>
+         <y>0</y>
+         <width>521</width>
+         <height>50</height>
+        </rect>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>50</height>
+        </size>
+       </property>
+       <widget class="QToolButton" name="EndPointsReverse">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>10</y>
+          <width>30</width>
+          <height>30</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="checkable">
+         <bool>true</bool>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_9">
+        <property name="geometry">
+         <rect>
+          <x>60</x>
+          <y>15</y>
+          <width>400</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>РЕВЕРС В КОН. ТОЧКАХ</string>
+        </property>
+       </widget>
       </widget>
      </widget>
     </item>
