Added mbee code to host and road. Adding full transmitting via serialstar library. Some problems with remote control responding.

--- a/host/source/ui/window.ui
+++ b/host/source/ui/window.ui
@@ -20,10 +20,52 @@
       <x>0</x>
       <y>0</y>
       <width>481</width>
-      <height>61</height>
+      <height>31</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="sizeConstraint">
+      <enum>QLayout::SetDefaultConstraint</enum>
+     </property>
+     <item>
+      <widget class="QLCDNumber" name="RSSI"/>
+     </item>
+     <item>
+      <widget class="QProgressBar" name="battery">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="value">
+        <number>50</number>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="verticalLayoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>90</y>
+      <width>481</width>
+      <height>711</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="layoutidontwant"/>
+   </widget>
+   <widget class="QWidget" name="horizontalLayoutWidget_2">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>30</y>
+      <width>481</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
      <property name="sizeConstraint">
       <enum>QLayout::SetDefaultConstraint</enum>
      </property>
@@ -70,17 +112,6 @@
       </widget>
      </item>
     </layout>
-   </widget>
-   <widget class="QWidget" name="verticalLayoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>-1</x>
-      <y>59</y>
-      <width>481</width>
-      <height>741</height>
-     </rect>
-    </property>
-    <layout class="QVBoxLayout" name="layoutidontwant"/>
    </widget>
   </widget>
  </widget>
