--- a/host/source/ui/settingswidget.ui
+++ b/host/source/ui/settingswidget.ui
@@ -357,7 +357,7 @@
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <widget class="QWidget" name="widget_7" native="true">
+     <widget class="QWidget" name="widget_10" native="true">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -370,7 +370,7 @@
         <height>50</height>
        </size>
       </property>
-      <widget class="QToolButton" name="toolButton_7">
+      <widget class="QToolButton" name="Shutdown">
        <property name="geometry">
         <rect>
          <x>10</x>
@@ -380,62 +380,23 @@
         </rect>
        </property>
        <property name="text">
-        <string>...</string>
+        <string/>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
        </property>
       </widget>
-      <widget class="QLabel" name="label_7">
+      <widget class="QLabel" name="label_10">
        <property name="geometry">
         <rect>
-         <x>50</x>
+         <x>60</x>
          <y>15</y>
-         <width>420</width>
+         <width>400</width>
          <height>20</height>
         </rect>
        </property>
        <property name="text">
-        <string>База 1</string>
-       </property>
-      </widget>
-     </widget>
-    </item>
-    <item>
-     <widget class="QWidget" name="widget_6" native="true">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>0</width>
-        <height>50</height>
-       </size>
-      </property>
-      <widget class="QToolButton" name="toolButton_6">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>10</y>
-         <width>30</width>
-         <height>30</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>...</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_6">
-       <property name="geometry">
-        <rect>
-         <x>50</x>
-         <y>15</y>
-         <width>420</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>База 2</string>
+        <string>ВЫКЛЮЧИТЬ ПРИЛОЖЕНИЕ</string>
        </property>
       </widget>
      </widget>
