--- a/host/source/ui/window.ui
+++ b/host/source/ui/window.ui
@@ -20,7 +20,7 @@
       <x>0</x>
       <y>0</y>
       <width>481</width>
-      <height>31</height>
+      <height>36</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -28,7 +28,24 @@
       <enum>QLayout::SetDefaultConstraint</enum>
      </property>
      <item>
-      <widget class="QLCDNumber" name="RSSI"/>
+      <widget class="QProgressBar" name="battery_road">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="value">
+        <number>0</number>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="RSSI">
+       <property name="text">
+        <string>Сигнал</string>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="QProgressBar" name="battery">
@@ -39,7 +56,7 @@
         </sizepolicy>
        </property>
        <property name="value">
-        <number>50</number>
+        <number>0</number>
        </property>
       </widget>
      </item>
