--- a/host/source/ui/workwidget.ui
+++ b/host/source/ui/workwidget.ui
@@ -38,7 +38,7 @@
        </size>
       </property>
       <property name="text">
-       <string>УСКОРЕНИЕ</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;УСКОРЕНИЕ&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
@@ -94,7 +94,7 @@
        </size>
       </property>
       <property name="text">
-       <string>ТОРМОЖЕНИЕ</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;ТОРМОЖЕНИЕ&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
@@ -147,7 +147,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>СКОРОСТЬ</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;СКОРОСТЬ&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
@@ -197,7 +197,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>ПОЛОЖЕНИЕ</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;ПОЛОЖЕНИЕ&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
