--- a/host/source/ui/telemetrywidget.ui
+++ b/host/source/ui/telemetrywidget.ui
@@ -44,6 +44,12 @@
       <property name="formAlignment">
        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
       </property>
+      <property name="horizontalSpacing">
+       <number>20</number>
+      </property>
+      <property name="verticalSpacing">
+       <number>20</number>
+      </property>
       <property name="leftMargin">
        <number>20</number>
       </property>
@@ -52,8 +58,20 @@
       </property>
       <item row="1" column="0">
        <widget class="QToolButton" name="sig_stop">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="text">
          <string/>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>50</width>
+          <height>50</height>
+         </size>
         </property>
         <property name="checkable">
          <bool>true</bool>
@@ -63,7 +81,10 @@
       <item row="1" column="1">
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>ОСТАНОВ</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;ОСТАНОВ&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="wordWrap">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
@@ -71,6 +92,12 @@
        <widget class="QToolButton" name="sig_ret1">
         <property name="text">
          <string/>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>50</width>
+          <height>50</height>
+         </size>
         </property>
         <property name="checkable">
          <bool>true</bool>
@@ -80,7 +107,7 @@
       <item row="2" column="1">
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>ВОЗВРАТ В ТОЧКУ 1</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;ВОЗВРАТ В ТОЧКУ 1&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
        </widget>
       </item>
@@ -88,6 +115,12 @@
        <widget class="QToolButton" name="sig_ret2">
         <property name="text">
          <string/>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>50</width>
+          <height>50</height>
+         </size>
         </property>
         <property name="checkable">
          <bool>true</bool>
@@ -97,7 +130,7 @@
       <item row="3" column="1">
        <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>ВОЗВРАТ В ТОЧКУ 2</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;ВОЗВРАТ В ТОЧКУ 2&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
        </widget>
       </item>
@@ -110,7 +143,7 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>ПРИ ПОТЕРЕ СИГНАЛА</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;ПРИ ПОТЕРЕ СИГНАЛА&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
        </widget>
       </item>
